gcWin: code refactoring

--- a/pentevo/sdk/gcWin/gcWin.cbp
+++ b/pentevo/sdk/gcWin/gcWin.cbp
@@ -31,7 +31,6 @@
 		</ExtraCommands>
 		<Unit filename="res/866_code.fnt" />
 		<Unit filename="res/spg.ini" />
-		<Unit filename="src/colors.h" />
 		<Unit filename="src/crt0.s">
 			<Option compiler="sdcc" use="1" buildCommand="sdasz80 -g -o $object $file" />
 		</Unit>
@@ -47,6 +46,7 @@
 		<Unit filename="src/main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="src/main.h" />
 		<Unit filename="src/numbers.h" />
 		<Unit filename="src/ts.h" />
 		<Unit filename="src/tsio.c">
@@ -57,12 +57,6 @@
 			<code_completion />
 			<envvars />
 			<lib_finder disable_auto="1" />
-			<AutoVersioning>
-				<Scheme minor_max="10" build_max="0" rev_max="0" rev_rand_max="10" build_times_to_increment_minor="100" />
-				<Settings autoincrement="1" date_declarations="1" use_define="0" update_manifest="0" do_auto_increment="0" ask_to_increment="0" language="C++" svn="0" svn_directory="" header_path="version.h" />
-				<Changes_Log show_changes_editor="0" app_title="released version %M.%m.%b of %p" changeslog_path="ChangesLog.txt" />
-				<Code header_guard="VERSION_H" namespace="AutoVersion" prefix="" />
-			</AutoVersioning>
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
