gcWin: added Makefile, fixed build

--- a/pentevo/sdk/gcWin/res/spg.ini
+++ b/pentevo/sdk/gcWin/res/spg.ini
@@ -7,5 +7,5 @@ Clock = 2
 INT = 0
 Pager = 0
 Compression = 0
-Block = #C000,0,out.bin
+Block = #C000,0,bin\gcwin.bin
 Block = #C000,#81,res\866_code.fnt
