gcWin: add GC_FRM_NOLOGO flag for disable logo in header. Code::Blocks project for Makefile now

--- a/pentevo/sdk/gcWin/Makefile
+++ b/pentevo/sdk/gcWin/Makefile
@@ -37,7 +37,7 @@ directories:
 	@mkdir -p $(BUILDDIR)
 
 #Clean only Objects
-clean:
+clean cleanall:
 	# $(foreach obj, $(OBJECTS), $(RM) -f $(obj))
 	@$(RM) -rf $(BUILDDIR)
 	@$(RM) -rf $(TARGETDIR)
