--- a/pentevo/sdk/gcWin/gcWin.cbp
+++ b/pentevo/sdk/gcWin/gcWin.cbp
@@ -3,32 +3,28 @@
 	<FileVersion major="1" minor="6" />
 	<Project>
 		<Option title="gcWin" />
+		<Option makefile_is_custom="1" />
 		<Option pch_mode="2" />
 		<Option compiler="sdcc" />
 		<Build>
-			<Target title="Release">
-				<Option output="bin/out.hex" prefix_auto="1" extension_auto="0" />
+			<Target title="all">
+				<Option output="bin/gcWin.hex" prefix_auto="0" extension_auto="0" />
 				<Option working_dir="" />
-				<Option object_output="obj/" />
+				<Option object_output="./obj./" />
 				<Option type="5" />
 				<Option compiler="sdcc" />
 			</Target>
 		</Build>
 		<Compiler>
-			<Add option="--std-c11" />
-			<Add option="-mz80" />
 			<Add option="--no-std-crt0" />
+			<Add option="-mz80" />
 			<Add option="--opt-code-speed" />
+			<Add option="--std-c11" />
 		</Compiler>
 		<Linker>
 			<Add option="-Wl-b_CODE=0x0200" />
 			<Add option="-Wl-b_DATA=0xB000" />
 		</Linker>
-		<ExtraCommands>
-			<Add after="hex2bin -e bin $(PROJECT_DIR)$(TARGET_OUTPUT_FILE)" />
-			<Add after="cp $(TARGET_OUTPUT_DIR)out.bin out.bin" />
-			<Add after="spgbld -b $(PROJECT_DIR)res/spg.ini $(PROJECT_NAME).spg" />
-		</ExtraCommands>
 		<Unit filename="res/866_code.fnt" />
 		<Unit filename="res/spg.ini" />
 		<Unit filename="src/crt0.s">
