--- a/pentevo/unreal/Unreal/Unreal2015.vcxproj.filters
+++ b/pentevo/unreal/Unreal/Unreal2015.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="Sources\ft8xx">
       <UniqueIdentifier>{d427986d-9761-4968-a8cc-f48848aa251a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="debugger">
+      <UniqueIdentifier>{6f7218a8-88df-4f06-8d60-2f543989efb0}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\main.ico">
@@ -77,36 +80,6 @@
       <Filter>Sources</Filter>
     </ClCompile>
     <ClCompile Include="daa_tabs.cpp">
-      <Filter>Sources</Filter>
-    </ClCompile>
-    <ClCompile Include="dbgbpx.cpp">
-      <Filter>Sources</Filter>
-    </ClCompile>
-    <ClCompile Include="dbgcmd.cpp">
-      <Filter>Sources</Filter>
-    </ClCompile>
-    <ClCompile Include="dbglabls.cpp">
-      <Filter>Sources</Filter>
-    </ClCompile>
-    <ClCompile Include="dbgmem.cpp">
-      <Filter>Sources</Filter>
-    </ClCompile>
-    <ClCompile Include="dbgoth.cpp">
-      <Filter>Sources</Filter>
-    </ClCompile>
-    <ClCompile Include="dbgpaint.cpp">
-      <Filter>Sources</Filter>
-    </ClCompile>
-    <ClCompile Include="dbgreg.cpp">
-      <Filter>Sources</Filter>
-    </ClCompile>
-    <ClCompile Include="dbgrwdlg.cpp">
-      <Filter>Sources</Filter>
-    </ClCompile>
-    <ClCompile Include="dbgtrace.cpp">
-      <Filter>Sources</Filter>
-    </ClCompile>
-    <ClCompile Include="debug.cpp">
       <Filter>Sources</Filter>
     </ClCompile>
     <ClCompile Include="draw.cpp">
@@ -355,11 +328,41 @@
     <ClCompile Include="sound\ayx32.cpp">
       <Filter>Sources\sound</Filter>
     </ClCompile>
-    <ClCompile Include="dbgtsconf.cpp">
-      <Filter>Sources</Filter>
+    <ClCompile Include="debugger\dbgbpx.cpp">
+      <Filter>debugger</Filter>
     </ClCompile>
-    <ClCompile Include="dbgwidgets.cpp">
-      <Filter>Sources</Filter>
+    <ClCompile Include="debugger\dbgcmd.cpp">
+      <Filter>debugger</Filter>
+    </ClCompile>
+    <ClCompile Include="debugger\dbglabls.cpp">
+      <Filter>debugger</Filter>
+    </ClCompile>
+    <ClCompile Include="debugger\dbgmem.cpp">
+      <Filter>debugger</Filter>
+    </ClCompile>
+    <ClCompile Include="debugger\dbgoth.cpp">
+      <Filter>debugger</Filter>
+    </ClCompile>
+    <ClCompile Include="debugger\dbgpaint.cpp">
+      <Filter>debugger</Filter>
+    </ClCompile>
+    <ClCompile Include="debugger\dbgreg.cpp">
+      <Filter>debugger</Filter>
+    </ClCompile>
+    <ClCompile Include="debugger\dbgrwdlg.cpp">
+      <Filter>debugger</Filter>
+    </ClCompile>
+    <ClCompile Include="debugger\dbgtrace.cpp">
+      <Filter>debugger</Filter>
+    </ClCompile>
+    <ClCompile Include="debugger\dbgtsconf.cpp">
+      <Filter>debugger</Filter>
+    </ClCompile>
+    <ClCompile Include="debugger\dbgwidgets.cpp">
+      <Filter>debugger</Filter>
+    </ClCompile>
+    <ClCompile Include="debugger\debug.cpp">
+      <Filter>debugger</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -378,37 +381,7 @@
     <ClInclude Include="daa_tabs.h">
       <Filter>Headers</Filter>
     </ClInclude>
-    <ClInclude Include="dbgbpx.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="dbgcmd.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="dbglabls.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="dbgmem.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="dbgoth.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="dbgpaint.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="dbgreg.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="dbgrwdlg.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="dbgtrace.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
     <ClInclude Include="ddk.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="debug.h">
       <Filter>Headers</Filter>
     </ClInclude>
     <ClInclude Include="defs.h">
@@ -669,11 +642,41 @@
     <ClInclude Include="sound\ayx32.h">
       <Filter>Headers\sound</Filter>
     </ClInclude>
-    <ClInclude Include="dbgtsconf.h">
-      <Filter>Headers</Filter>
+    <ClInclude Include="debugger\dbgbpx.h">
+      <Filter>debugger</Filter>
     </ClInclude>
-    <ClInclude Include="dbgwidgets.h">
-      <Filter>Headers</Filter>
+    <ClInclude Include="debugger\dbgcmd.h">
+      <Filter>debugger</Filter>
+    </ClInclude>
+    <ClInclude Include="debugger\dbglabls.h">
+      <Filter>debugger</Filter>
+    </ClInclude>
+    <ClInclude Include="debugger\dbgmem.h">
+      <Filter>debugger</Filter>
+    </ClInclude>
+    <ClInclude Include="debugger\dbgoth.h">
+      <Filter>debugger</Filter>
+    </ClInclude>
+    <ClInclude Include="debugger\dbgpaint.h">
+      <Filter>debugger</Filter>
+    </ClInclude>
+    <ClInclude Include="debugger\dbgreg.h">
+      <Filter>debugger</Filter>
+    </ClInclude>
+    <ClInclude Include="debugger\dbgrwdlg.h">
+      <Filter>debugger</Filter>
+    </ClInclude>
+    <ClInclude Include="debugger\dbgtrace.h">
+      <Filter>debugger</Filter>
+    </ClInclude>
+    <ClInclude Include="debugger\dbgtsconf.h">
+      <Filter>debugger</Filter>
+    </ClInclude>
+    <ClInclude Include="debugger\dbgwidgets.h">
+      <Filter>debugger</Filter>
+    </ClInclude>
+    <ClInclude Include="debugger\debug.h">
+      <Filter>debugger</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
