--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
-*
+pentevo/avr/*
+pentevo/avrboot/*
+pentevo/demos/*
+pentevo/docs/*
+pentevo/flasher/*
+pentevo/fpga/*
+pentevo/ide_video/*
+pentevo/pcad/*
+pentevo/rom/*
+pentevo/sdk/*
+pentevo/soft/*
+pentevo/specs/*
+pentevo/test/*
+pentevo/test_n_service/*
+pentevo/tools/*
+pentevo/unreal/.vs*
+pentevo/unreal/*.user*
+pentevo/unreal/*/bin/Debug/**
+pentevo/unreal/*/bin/Release/**
+pentevo/unreal/*/tmp/**
+reverse/*
